k8s-deployment-example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spotify-history-saver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-history-saver
  namespace: spotify-history-saver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotify-history-saver
  template:
    metadata:
      labels:
        app: spotify-history-saver
    spec:
      volumes:
      - name: spotify-pvc
        persistentVolumeClaim:
          claimName: spotify-pvc
      containers:
      - name: spotify-container
        imagePullPolicy: Always
        image: alex4108/spotify_history_saver:latest # You should pin to a specific SHA
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /persist
          name: spotify-pvc
        resources:
          requests:
            memory: 500M
          limits:
            memory: 500M
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-service
  namespace: spotify-history-saver
spec:
  selector:
    app: spotify-history-saver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-ingress
  namespace: spotify-history-saver
  #annotations: 
spec:
  ingressClassName: nginx
  rules:
  - host: spotify-history-saver.yourdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spotify-service
            port:
              number: 80
